# h1scout

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  plan.md
.github/workflows/: ci.yml
config/: default.toml
src/: cli.rs  lib.rs  main.rs
src/api/: client.rs  mod.rs  models.rs
src/db/: cache.rs  mod.rs
src/filter/: android.rs  mobility.rs  mod.rs
src/output/: json.rs  mod.rs  table.rs
src/scorer/: engine.rs  mod.rs  weights.rs
tests/: api_mock.rs
tests/fixtures/: programs_page1.json  programs_page2.json  scopes_android.json
