[package]
name = "h1scout"
version = "0.1.0"
edition = "2021"
description = "HackerOne bug bounty program selector — Android/mobility specialized"
license = "MIT"

[[bin]]
name = "h1scout"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "macros"] }
anyhow = "1"
tabled = "0.15"
toml = "0.8"
dirs = "5"

[dev-dependencies]
httpmock = "0.7"
tokio-test = "0.4"
